# github-trends

./: .gitignore  .travis.yml  GitHubTrends.hs  Main.hs  README.md  deploy.sh  github-trends.cabal  run  run.sh  stack.yaml
app/: Main.hs
