name:                github-trends
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Hexirp/github-trends#readme
license:             BSD3
license-file:        LICENSE
author:              Hexirp
maintainer:          Hexirp@users.noreply.github.com
copyright:           2017 Hexirp
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable github-trends-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , github-trends
  default-language:    Haskell2010

test-suite github-trends-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , github-trends
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Hexirp/github-trends
