name:                github-trends
version:             0.1.0.0
synopsis:            Scrape GitHub's Trends
description:         GitHub does not provide an API to access trends.
                     github-trends provide it. You must understand that this
                     method is inherently unstable.
homepage:            https://github.com/Hexirp/github-trends#readme
license:             BSD3
license-file:        LICENSE
author:              Hexirp
maintainer:          https://github.com/Hexirp/github-trends/issues
copyright:           2017 Hexirp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

executable github-trends-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , http-conduit
                     , xml-conduit
                     , html-conduit
                     , github-trends
  default-language:    Haskell2010

test-suite github-trends-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , github-trends
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Hexirp/github-trends
